Test/dafny0/ByMethodResolution.dfy.expect
ByMethodResolution.dfy(17,6): Error: number of return parameters does not match declaration (found 2, expected 1)
ByMethodResolution.dfy(25,4): Error: RHS (of type bv9) not assignable to LHS (of type real)
ByMethodResolution.dfy(24,6): Error: RHS (of type int) not assignable to LHS (of type real)
ByMethodResolution.dfy(63,13): Error: a call to a ghost function is allowed only in specification contexts (consider declaring the function with 'function method')
ByMethodResolution.dfy(64,13): Error: a call to a ghost predicate is allowed only in specification contexts (consider declaring the predicate with 'predicate method')
ByMethodResolution.dfy(65,13): Error: a call to a twostate function is allowed only in specification contexts
ByMethodResolution.dfy(85,9): Error: ghost variables are allowed only in specification contexts
ByMethodResolution.dfy(92,14): Error: ghost variables are allowed only in specification contexts
ByMethodResolution.dfy(106,4): Error: a recursive call from a least predicate can go only to other least predicates
ByMethodResolution.dfy(142,4): Error: a recursive call from a least predicate can go only to other least predicates
ByMethodResolution.dfy(157,4): Error: a recursive call from a least predicate can go only to other least predicates
11 resolution/type errors detected in ByMethodResolution.dfy
